@@ -291,6 +291,8 @@ Unreleased changes (1.0-dev)
 107. NUTCH-647 - Resolve URLs tool (kubes)
 
 108. NUTCH-665 - Search Load Testing Tool (kubes)
+
+109. NUTCH-667 - Input Format for working with Content in Hadoop Streaming
      
 Release 0.9 - 2007-04-02
 
